# pico_CMAX31855

./: .clang-format  .gitignore  CMakeLists.txt  README.md  license.txt  pico_CMAX31855.c  pico_CMAX31855.h
documentation/: Doxyfile  build.dox
documentation/html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  pico___m_a_x31855_8h.html  pico___m_a_x31855_8h_source.html  structpico___m_a_x31855.html
documentation/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
examples/: example_1.c  example_spi0.c  example_spi1.c
include/: pico_MAX31855.h
src/: pico_MAX31855.c
